--- a/app/globals.css
+++ b/app/globals.css
@@ -84,7 +84,7 @@
 }
 
 .root-container {
-  @apply flex-1 overflow-auto lg:mt-0 lg:max-h-screen
+  @apply mt-16 flex-1 overflow-auto py-8 lg:mt-0 lg:max-h-screen lg:py-10
 }
 
 /* ========================================== TAILWIND STYLES */
@@ -191,11 +191,11 @@
   }
 
   .select-field {
-    @apply w-full border-2 border-purple-200/20 shadow-sm shadow-purple-200/15 rounded-[16px] h-[50px] md:h-[54px] text-dark-600 p-16-semibold disabled:opacity-100 placeholder:text-dark-400/50 px-4 py-3 focus:ring-offset-0 focus-visible:ring-transparent focus:ring-transparent focus-visible:ring-0 focus-visible:outline-none !important;
+    @apply w-full border-2 border-purple-200/20 shadow-sm shadow-purple-200/15 rounded-[16px] h-[50px] md:h-[54px] text-dark-600 p-16-semibold disabled:opacity-100 placeholder:text-dark-400/50 px-4 py-3 focus:ring-offset-0 focus-visible:ring-transparent focus:ring-transparent focus-visible:ring-0 focus-visible:outline-none focus:outline-none !important;
   }
 
   .select-trigger {
-    @apply flex items-center  gap-2 py-5 capitalize focus-visible:outline-none;
+    @apply flex items-center  gap-2 py-5 capitalize focus-visible:outline-none focus:outline-none !important;
   }
 
   .select-item {
@@ -298,7 +298,7 @@
 
   /* Navbar Component */
   .header {
-    @apply flex-between fixed left-0 h-16 w-full border-b-4 border-purple-100 bg-white p-5 lg:hidden;
+    @apply flex-between fixed h-16 w-full border-b-4 border-purple-100 bg-white p-5 lg:hidden;
   }
 
   .header-nav_elements {
